# SmartContentAI

./: .gitignore  README.md  SmartContentAI.json
api/: Procfile  main.py  pyproject.toml  requirements.txt
api/service/: dalle_service.py  openai_service.py  transcript_service.py
api/utils/: prompt_utils.py
smart-content-ai/: package-lock.json  package.json
smart-content-ai/public/: index.html
smart-content-ai/src/: App.tsx
smart-content-ai/src/components/: InputForm.tsx  ResultBox.tsx
